--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "type": "module",
   "dependencies": {
+    "axios": "^0.27.2",
     "express": "^4.18.1",
     "kafkajs": "^2.0.0",
     "oracledb": "^5.3.0"
